fix quicklinks apparence on mobile

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -33,6 +33,16 @@
     flex-wrap: wrap;
 }
 
+.races-card {
+    max-width: 62%;
+}
+
+@media (max-width: 700px) {
+    .races-card {
+        max-width: 100%;
+    }
+}
+
 .description {
     display: inherit;
     justify-content: inherit;
